# wasm-gc

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md
src/: main.rs
wasm-gc/: Cargo.toml  README.md
wasm-gc-api/: Cargo.toml
wasm-gc-api/src/: gc.rs  lib.rs
wasm-gc-capi/: Cargo.toml
wasm-gc-capi/src/: lib.rs
wasm-gc/src/: error.rs  gc.rs  lib.rs
