[package]
name = "wasm-gc"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[[bin]]
name = "wasm-gc"
path = "src/main.rs"

[dependencies]
env_logger = { version = "0.5", default-features = false }
getopts = "0.2"
wasm-gc-api = { path = "wasm-gc-api", version = "0.1" }

[workspace]
