[package]
name = "wasm-gc-api"
version = "0.1.8"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
repository = "https://github.com/alexcrichton/wasm-gc"
homepage = "https://github.com/alexcrichton/wasm-gc"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A library to garbage collect webassembly modules"
keywords = ["webasm"]
categories = ["development-tools"]

[lib]
name = "wasm_gc"

[dependencies]
parity-wasm = "0.31"
log = "0.4"
rustc-demangle = "0.1.5"
