[package]
name = "wasm-gc"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
repository = "https://github.com/alexcrichton/wasm-gc"
homepage = "https://github.com/alexcrichton/wasm-gc"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A library to garbage collect webassembly modules"
keywords = ["webasm"]
categories = ["development-tools"]

[dependencies]
parity-wasm = "0.24"
log = "0.4"
rustc-demangle = "0.1.5"
